--- a/src/app/views/features/contract/view-contract/view-contract.component.scss
+++ b/src/app/views/features/contract/view-contract/view-contract.component.scss
@@ -15,7 +15,8 @@ button {
   padding: 10px 20px;
   display: flex;
   font-size: 15px;
-  min-width:90px;
+  min-width: 13%;
+  max-width: 30%;
   width: inherit;
   text-transform: uppercase;
   cursor: default;
