--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.scss
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.scss
@@ -16,7 +16,8 @@ button {
   padding: 10px 20px;
   display: flex;
   font-size: 15px;
-  min-width: 90px;
+  min-width: 13%;
+  max-width: 30%;
   text-transform: uppercase;
   cursor: default;
   transform: skew(-21deg);
