--- a/src/app/views/container/container.component.html
+++ b/src/app/views/container/container.component.html
@@ -1,7 +1,7 @@
 
 <app-toolbar></app-toolbar>
-<div class="container">
-<router-outlet></router-outlet>
+<div class="container overflow-x-hidden px-3">
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
 
