--- a/src/app/views/components/footer/footer.component.html
+++ b/src/app/views/components/footer/footer.component.html
@@ -2,22 +2,36 @@
   <div class="footer-content">
     &copy; Collective 2023
   </div>
+
   <div class="social-links">
+
+    <!--hackmd-->
     <a href="https://hackmd.io/@Hsuanil/ryM3_ubb2">
       <i class="fa-regular fa-file-lines"></i>
     </a>
 
+    <!--figma-->
     <a href="https://www.figma.com/file/CoxLBzPo5yuUvbH9qq3zOd/crm?type=design&node-id=0%3A1&t=emJZsqQljzgzjVd9-1">
       <i class="fa-brands fa-figma"></i>
     </a>
 
+    <!--canva-->
+    <!--    <a-->
+    <!--      href="https://www.canva.com/design/DAFifWFC88I/zxF8n1QjBzvjwCXRZowXQA/watch?utm_content=DAFifWFC88I&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">-->
+    <!--      <i class="pi pi-play"></i>-->
+    <!--    </a>-->
+
+    <!--youtube-->
     <a
-      href="https://www.canva.com/design/DAFifWFC88I/zxF8n1QjBzvjwCXRZowXQA/watch?utm_content=DAFifWFC88I&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">
+      href="https://youtu.be/Rh8H_VHFyMQ">
       <i class="pi pi-play"></i>
     </a>
 
-    <a href="https://miro.com/welcomeonboard/Q0hHTG83RW1LdDMyYmY4MXpGaFQyWEh2S3pSdEM5NUdFRXRvSnJwN2hDUlNOcUVFRndWb3h6bG5wYUNQbjlQM3wzNDU4NzY0NTM1MTQ1MDUyNDA5fDI=?share_link_id=506522656330">
+    <!--miro-->
+    <a
+      href="https://miro.com/welcomeonboard/Q0hHTG83RW1LdDMyYmY4MXpGaFQyWEh2S3pSdEM5NUdFRXRvSnJwN2hDUlNOcUVFRndWb3h6bG5wYUNQbjlQM3wzNDU4NzY0NTM1MTQ1MDUyNDA5fDI=?share_link_id=506522656330">
       <i class="fa-solid fa-m"></i>
     </a>
+
   </div>
 </footer>
