--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -215,7 +215,7 @@
         <label>建立者：</label>
         <br>
         <div class="mt-3 field">
-<!--          <label class="disable">{{(campaign_form.controls['created_by'].value)}}</label>-->
+          <label class="disable">{{(campaign_form.controls['created_by'].value)}}</label>
           <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value)}}</label>
         </div>
       </div>
@@ -223,7 +223,7 @@
         <label>上次修改者：</label>
         <br>
         <div class="mt-3 field">
-<!--          <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>-->
+          <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>
           <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value)}}</label>
         </div>
       </div>
